codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__small.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"▌ short                                                                                             "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"                                                                                                    "
"⏎ send   ⌃J newline   ⌃T transcript   ⌃C quit   ⌃S save prompt                                      "
